# dezero

./: .devcontainer.json  Makefile  README.md  pyproject.toml
dezero/: __init__.py  core.py  core_simple.py  functions.py  layers.py  models.py  optimizers.py  utils.py
environments/: Dockerfile
environments/cpu/: docker-compose.yaml
steps/: step01.py  step02.py  step03.py  step04.py  step06.py  step07.py  step08.py  step09.py  step11.py  step12.py  step13.py  step14.py  step16.py  step17.py  step18.py  step19.py  step20.py  step21.py  step22.py  step23.py  step26.py  step27.py  step28.py  step29.py  step33.py  step34.py  step35.py  step38.py  step40.py  step41.py  step42.py  step43.py  step44.py  step45.py  step46.py
tests/: test_step09.py
tests/steps/: test_step01.py  test_step02.py  test_step03.py  test_step04.py  test_step06.py  test_step07.py  test_step08.py  test_step10.py  test_step11.py  test_step12.py
