[tool.poetry]
name = "dezero"
version = "0.1.0"
description = "DeZero is a python package that provides a deep learing framework."
license = "MIT"
authors = [""]
maintainers = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88